Added new experiments and comments

--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@ epochs = 500
 start_lr = 0.001
 max_lr = 0.01
 steps_per_epoch = 1
-strategy = cos
+strategy = linear
 
 [tensorflow]
 start_lr = 0.001
